Mon Dec 13 18:08:21 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_sequence.cpp:
        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:
        * TAO_IDL/be_include/be_visitor_sequence/cdr_op_cs.h:
        
          Added some missing virtual visit_* methods for sequences
          of eventtypes, components and homes. Thanks to Gary Duzan
          <gduzan@bbn.com> for reporting the marhshaling exception
          with sequences of eventtypes.

Mon Dec 13 18:12:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Release:

	  Fixed a typo.

Mon Dec 13 11:58:49 2004  Chad Elliott  <elliott_c@ociweb.com>

        * interop-tests/wchar/client.cpp:

          Avoid build warnings from vc71 about mixing CORBA::Boolean and
          int.

        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Receiver.cpp:
        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Sender.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_Server.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Simple_Mcast_EH.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_EH.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.i:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.cpp:
        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP_Factory.cpp:

          Added missing \n from many ACE_ERROR and ACE_DEBUG messages.

        * orbsvcs/orbsvcs/Event/EC_Reactive_ConsumerControl.cpp:
        * orbsvcs/orbsvcs/Event/EC_Reactive_SupplierControl.cpp:

          Fixed a bug where the timer would not get canceled in the shutdown
          method as it should.

        * orbsvcs/orbsvcs/Notify/Structured/RT_StructuredProxyPushSupplier.h:
        * orbsvcs/orbsvcs/Notify/Structured/RT_StructuredProxyPushSupplier.cpp:

          Renamed the deliver request method as it is not called by anything
          that I could find.  This eliminates a warning about virtual method
          hiding.
